--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,13 +1,6 @@
-.container{
-  display: flex;
-  padding: 100px;
-  /* margin-left: 50px; */
-  justify-content: space-evenly;
-}
-
-
-@media screen and (max-width:840px){
-  .container{
-    display: block;
+@media screen and (min-width: 992px) {
+  .container {
+    display: flex;
+    gap: 12rem;
   }
 }
