--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,3 +1,10 @@
+.container{
+  display: flex;
+  padding: 100px;
+  /* margin-left: 50px; */
+  justify-content: space-evenly;
+}
+
 @media screen and (min-width: 992px) {
   .container {
     display: flex;
