--- a/src/TabularDataSection/TabularData.module.css
+++ b/src/TabularDataSection/TabularData.module.css
@@ -4,6 +4,7 @@
   font-size: 54px;
   margin-top: 130px;
   font-weight: 500;
+  text-align: center;
 }
 
 .table {
@@ -13,6 +14,17 @@
   padding: 5px;
   width: 20px;
   text-align: left;
+}
+
+.buttons{
+    color: white;
+    background-color: transparent;
+    border: none;
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
 }
 
 .oddRow {
@@ -39,7 +51,7 @@
   padding: 4px 12px;
   /* border-radius: 4px; */
   align-items: center;
-  gap: 1rem;
+  /* gap: 1rem; */
 }
 
 .downloadCSV {
